k8s/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-api
  namespace: usuarios
spec:
  replicas: 4
  selector:
    matchLabels:
      app: usuarios-api
  template:
    metadata:
      labels:
        app: usuarios-api
    spec:
      containers:
        - name: usuarios-api
          image: usuarios-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 45
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
