k8s/03-postgres-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: usuarios
spec:
  type: ClusterIP
  ports:
    - name: pgbouncer
      port: 6432
      targetPort: 6432
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: postgres-service-1
  namespace: usuarios
  labels:
    kubernetes.io/service-name: postgres-service
addressType: IPv4
ports:
  - name: pgbouncer
    protocol: TCP
    port: 6432
endpoints:
  - addresses:
      - "192.168.40.13"
