k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuarios-api
  namespace: usuarios
spec:
  type: ClusterIP
  selector:
    app: usuarios-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
